# effective-fiesta

./: README.md
c/AI_DATA/: .main.cpp.swp  Sound.cpp  main.cpp
c/AI_LITE/: AI LITE.txt  Castle.cpp  Castle.hpp  Database.cpp  Database.hpp  GlobalVars.hpp  GraphicalUserInterface.cpp  GraphicalUserInterface.hpp  Kingdom.cpp  Kingdom.hpp  README.md  SentenceData.cpp  SentenceData.hpp  Sound.cpp  WordObject.cpp  WordObject.hpp  main.cpp
c/OpenGLProject/: CMakeLists.txt
c/OpenGLProject/src/: main.cpp
c/ROCK-5B-DASHBOARD/src/: main.cpp  rockdash  vis_table.hpp
java/: AI_Role.java
java/AITestImplementation/: .project
java/AITestImplementation/src/: Main.java
java/AITestRewrite/: .project
java/ArmouredRailRunner/: credits.txt
java/ArmouredRailRunner/res/: extratracks.mtl  fence.mtl  hangar1.mtl  hangar1terrainE.mtl  hangar1terrainF.mtl  hangar1terrainHuge.mtl  hangar2.mtl  hangar2v2.mtl  map1Detail.mtl  mapDetail1.mtl  theMountains1.mtl  track.mtl  train1gun.mtl  train1mkII.mtl
java/CS115/: .project
java/InfiniteJump/: .classpath  .project
java/LanguageBot/: Main.java  You.txt  copypasta.txt  feel_good.txt  fill_data.java  ideas  manifest.txt  manifest_old.txt  rewrite.2.java  rewrite.java  tweets.txt
java/LanguageBot/.metadata/: .lock_info  version.ini
java/gambling sim/: Main.java  stats.txt
java/old code/MyOwnMaste/: .classpath  (+2 more)
other/Support_Spooky/: AI.cs  Datablocks.cs  Functions.cs  PrepperAI.cs  client.cs  credits.txt  description.txt  music.cs  namecheck.txt  rtbInfo.txt  server.cs
python/NXTDevThings/: controls.py  program.py  sort.py
(+705 files in other folders)
